--- a/index.css
+++ b/index.css
@@ -210,3 +210,16 @@ a {
   margin: 20px auto;
   line-height: 1.6;
 }
+
+.profile-img {
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+}
+
+.profile-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
